--- a/index.html
+++ b/index.html
@@ -32,11 +32,21 @@
         <ul class="auth-nav list">
           <!-- E-mail -->
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="link">
+              <svg class="icon-envelope" width="16px" height="12px">
+                <use href="/images/icons.svg/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
+            >
           </li>
           <!-- Tel -->
           <li class="item">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link">
+              <svg class="icon-smartphone" width="10px" height="16px">
+                <use href="/images/icons.svg/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -57,6 +67,11 @@
           <ul class="feature-liste list">
             <!-- Feature 1 -->
             <li class="item">
+              <div class="item-icon">
+                <svg width="70px" height="70px">
+                  <use href="/images/icons.svg/symbol-defs.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
@@ -64,6 +79,11 @@
             </li>
             <!-- Feature 2 -->
             <li class="item">
+              <div class="item-icon">
+                <svg width="70px" height="70px">
+                  <use href="/images/icons.svg/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="title">Пунктуальность</h3>
               <p class="text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
@@ -71,6 +91,11 @@
             </li>
             <!-- Feature 3 -->
             <li class="item">
+              <div class="item-icon">
+                <svg width="70px" height="70px">
+                  <use href="/images/icons.svg/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="title">Планирование</h3>
               <p class="text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
@@ -78,6 +103,11 @@
             </li>
             <!-- Feature 4 -->
             <li class="item">
+              <div class="item-icon">
+                <svg width="70px" height="70px">
+                  <use href="/images/icons.svg/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="title">Современные технологии</h3>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -114,6 +144,28 @@
               <div class="title-text">
                 <h3 class="title">Игорь Демьяненко</h3>
                 <p class="text">Product Designer</p>
+                <div class="social-team">
+                  <a href="" class="social-links">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="/images/icons.svg/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="social-links">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="/images/icons.svg/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="social-links">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="/images/icons.svg/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="social-links">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="/images/icons.svg/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <!-- team card 2 -->
@@ -122,6 +174,28 @@
               <div class="title-text">
                 <h3 class="title">Ольга Репина</h3>
                 <p class="text">Frontend Developer</p>
+                <div>
+                  <a href="" class="social-links">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="/images/icons.svg/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="social-links">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="/images/icons.svg/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="social-links">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="/images/icons.svg/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="social-links">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="/images/icons.svg/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <!-- team card 3 -->
@@ -130,6 +204,28 @@
               <div class="title-text">
                 <h3 class="title">Николай Тарасов</h3>
                 <p class="text">Marketing</p>
+                <div>
+                  <a href="" class="social-links">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="/images/icons.svg/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="social-links">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="/images/icons.svg/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="social-links">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="/images/icons.svg/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="social-links">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="/images/icons.svg/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
             <!-- team card 4 -->
@@ -138,9 +234,77 @@
               <div class="title-text">
                 <h3 class="title">Михаил Ермаков</h3>
                 <p class="text">UI Designer</p>
+                <div>
+                  <a href="" class="social-links">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="/images/icons.svg/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="social-links">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="/images/icons.svg/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="social-links">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="/images/icons.svg/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                  <a href="" class="social-links">
+                    <svg class="social-icon" width="20px" height="20px">
+                      <use href="/images/icons.svg/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </div>
               </div>
             </li>
           </ul>
+        </div>
+      </section>
+      <!-- Regular customers -->
+      <section class="section customers">
+        <h2 class="title">Постоянные клиенты</h2>
+        <div class="customers-descrip">
+          <a href="" class="customers-links">
+            <svg class="icon-group1" width="41px" height="46.7px">
+              <use href="/images/icons.svg/symbol-defs.svg#icon-group1"></use>
+            </svg>
+          </a>
+        </div>
+        <div class="customers-descrip">
+          <a href="" class="customers-links">
+            <svg class="icon-group2" width="41px" height="46.7px">
+              <use href="/images/icons.svg/symbol-defs.svg#icon-group2"></use>
+            </svg>
+          </a>
+        </div>
+        <div class="customers-descrip">
+          <a href="" class="customers-links">
+            <svg class="icon-group3" width="41px" height="46.7px">
+              <use href="/images/icons.svg/symbol-defs.svg#icon-group3"></use>
+            </svg>
+          </a>
+        </div>
+        <div class="customers-descrip">
+          <a href="" class="customers-links">
+            <svg class="icon-group4" width="41px" height="46.7px">
+              <use href="/images/icons.svg/symbol-defs.svg#icon-group4"></use>
+            </svg>
+          </a>
+        </div>
+        <div class="customers-descrip">
+          <a href="" class="customers-links">
+            <svg class="icon-group5" width="41px" height="46.7px">
+              <use href="/images/icons.svg/symbol-defs.svg#icon-group5"></use>
+            </svg>
+          </a>
+        </div>
+        <div class="customers-descrip">
+          <a href="" class="customers-links">
+            <svg class="icon-group6" width="41px" height="46.7px">
+              <use href="/images/icons.svg/symbol-defs.svg#icon-group6"></use>
+            </svg>
+          </a>
         </div>
       </section>
     </main>
@@ -170,6 +334,30 @@
               <a href="tel:+380991111111" class="tel link">+38 099 111 11 11</a>
             </li>
           </ul>
+          <!-- Social -->
+          <div class="social">
+            <p class="text">присоединяйтесь</p>
+            <a href="" class="social-links">
+              <svg class="links-icon" width="20px" height="20px">
+                <use href="/images/icons.svg/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+            </a>
+            <a href="" class="social-links">
+              <svg class="links-icon" width="20px" height="20px">
+                <use href="/images/icons.svg/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+            </a>
+            <a href="" class="social-links">
+              <svg class="links-icon" width="20px" height="20px">
+                <use href="/images/icons.svg/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+            </a>
+            <a href="" class="social-links">
+              <svg class="links-icon" width="20px" height="20px">
+                <use href="/images/icons.svg/symbol-defs.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </div>
         </address>
       </div>
     </footer>
