--- a/portfolio.html
+++ b/portfolio.html
@@ -32,11 +32,21 @@
         <ul class="auth-nav list">
           <!-- E-mail -->
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="link">
+              <svg class="icon-envelope" width="16px" height="12px">
+                <use href="/images/icons.svg/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
+            >
           </li>
           <!-- Tel -->
           <li class="item">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link">
+              <svg class="icon-smartphone" width="10px" height="16px">
+                <use href="/images/icons.svg/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -150,6 +160,30 @@
               <a href="tel:+380991111111" class="tel link">+38 099 111 11 11</a>
             </li>
           </ul>
+          <!-- Social -->
+          <div class="social">
+            <p class="text">присоединяйтесь</p>
+            <a href="" class="social-links">
+              <svg class="links-icon" width="20px" height="20px">
+                <use href="/images/icons.svg/symbol-defs.svg#icon-instagram"></use>
+              </svg>
+            </a>
+            <a href="" class="social-links">
+              <svg class="links-icon" width="20px" height="20px">
+                <use href="/images/icons.svg/symbol-defs.svg#icon-twitter"></use>
+              </svg>
+            </a>
+            <a href="" class="social-links">
+              <svg class="links-icon" width="20px" height="20px">
+                <use href="/images/icons.svg/symbol-defs.svg#icon-facebook"></use>
+              </svg>
+            </a>
+            <a href="" class="social-links">
+              <svg class="links-icon" width="20px" height="20px">
+                <use href="/images/icons.svg/symbol-defs.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </div>
         </address>
       </div>
     </footer>
