--- a/portfolio.html
+++ b/portfolio.html
@@ -24,8 +24,8 @@
           <!-- WebStudio -->
           <a href="./index.html" class="logo link"><span class="accent">Web</span>Studio</a>
           <ul class="site-nav list">
-            <li class="item"><a href="./index.html" class="link">Студія</a></li>
-            <li class="item"><a href="./portfolio.html" class="link carrent">Портфоліо</a></li>
+            <li class="item"><a href="./index.html" class="link carrent">Студія</a></li>
+            <li class="item"><a href="./portfolio.html" class="link">Портфоліо</a></li>
             <li class="item"><a href="./index.html" class="link">Контакти</a></li>
           </ul>
         </nav>
@@ -34,7 +34,7 @@
           <li class="item">
             <a href="mailto:info@devstudio.com" class="link">
               <svg class="icon-envelope" width="16px" height="12px">
-                <use href="/images/icons.svg/symbol-defs.svg#icon-envelope"></use>
+                <use href="./images/icons.svg/symbol-defs.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
             >
@@ -43,7 +43,7 @@
           <li class="item">
             <a href="tel:+380961111111" class="link">
               <svg class="icon-smartphone" width="10px" height="16px">
-                <use href="/images/icons.svg/symbol-defs.svg#icon-smartphone"></use>
+                <use href="./images/icons.svg/symbol-defs.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
             >
@@ -68,67 +68,85 @@
           <!-- projects -->
           <ul class="projects list">
             <li class="item">
-              <img src="images/img1.jpg" alt="Laptop website" width="370" />
-              <div class="projects-descr">
-                <h2 class="title">Технокряк</h2>
-                <p class="text">Веб-сайт</p>
-              </div>
+              <a href="" class="link">
+                <img src="images/img1.jpg" alt="Laptop website" width="370" />
+                <div class="projects-descr">
+                  <h2 class="title">Технокряк</h2>
+                  <p class="text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <img src="images/img2.jpg" alt="Basketball design" width="370" />
-              <div class="projects-descr">
-                <h2 class="title">Постер New Orlean vs Golden Star</h2>
-                <p class="text">Дизайн</p>
-              </div>
+              <a href="" class="link">
+                <img src="images/img2.jpg" alt="Basketball design" width="370" />
+                <div class="projects-descr">
+                  <h2 class="title">Постер New Orlean vs Golden Star</h2>
+                  <p class="text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <img src="images/img3.jpg" alt="Seafood" width="370" />
-              <div class="projects-descr">
-                <h2 class="title">Ресторан Seafood</h2>
-                <p class="text">Приложение</p>
-              </div>
+              <a href="" class="link">
+                <img src="images/img3.jpg" alt="Seafood" width="370" />
+                <div class="projects-descr">
+                  <h2 class="title">Ресторан Seafood</h2>
+                  <p class="text">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <img src="images/img4.jpg" alt="Headphone" width="370" />
-              <div class="projects-descr">
-                <h2 class="title">Проект Prime</h2>
-                <p class="text">Маркетинг</p>
-              </div>
+              <a href="" class="link">
+                <img src="images/img4.jpg" alt="Headphone" width="370" />
+                <div class="projects-descr">
+                  <h2 class="title">Проект Prime</h2>
+                  <p class="text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <img src="images/img5.jpg" alt="Boxes" width="370" />
-              <div class="projects-descr">
-                <h2 class="title">Проект Boxes</h2>
-                <p class="text">Приложение</p>
-              </div>
+              <a href="" class="link">
+                <img src="images/img5.jpg" alt="Boxes" width="370" />
+                <div class="projects-descr">
+                  <h2 class="title">Проект Boxes</h2>
+                  <p class="text">Приложение</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <img src="images/img6.jpg" alt="Monitor" width="370" />
-              <div class="projects-descr">
-                <h2 class="title">Inspiration has no Borders</h2>
-                <p class="text">Веб-сайт</p>
-              </div>
+              <a href="" class="link">
+                <img src="images/img6.jpg" alt="Monitor" width="370" />
+                <div class="projects-descr">
+                  <h2 class="title">Inspiration has no Borders</h2>
+                  <p class="text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <img src="images/img7.jpg" alt="Magazine" width="370" />
-              <div class="projects-descr">
-                <h2 class="title">Издание Limited Edition</h2>
-                <p class="text">Дизайн</p>
-              </div>
+              <a href="" class="link">
+                <img src="images/img7.jpg" alt="Magazine" width="370" />
+                <div class="projects-descr">
+                  <h2 class="title">Издание Limited Edition</h2>
+                  <p class="text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <img src="images/img8.jpg" alt="Label Tag" width="370" />
-              <div class="projects-descr">
-                <h2 class="title">Проект LAB</h2>
-                <p class="text">Маркетинг</p>
-              </div>
+              <a href="" class="link">
+                <img src="images/img8.jpg" alt="Label Tag" width="370" />
+                <div class="projects-descr">
+                  <h2 class="title">Проект LAB</h2>
+                  <p class="text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="item">
-              <img src="images/img9.jpg" alt="Working at a computer" width="370" />
-              <div class="projects-descr">
-                <h2 class="title">Growing Business</h2>
-                <p class="text">Приложение</p>
-              </div>
+              <a href="" class="link">
+                <img src="images/img9.jpg" alt="Working at a computer" width="370" />
+                <div class="projects-descr">
+                  <h2 class="title">Growing Business</h2>
+                  <p class="text">Приложение</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -137,54 +155,56 @@
     <footer class="footer">
       <!-- Footer -->
       <div class="conteiner">
-        <a href="./index.html" class="logo link white-color-logo"
-          ><span class="accent">Web</span>Studio</a
-        >
-        <!-- Address -->
-        <address class="address">
-          <ul class="site-add list">
-            <li class="item">
-              <a
-                href=" https://goo.gl/maps/tUF5QNgFsShk5FHRA"
-                target="_blank"
-                rel="noreferrer noopener"
-                class="link"
-              >
-                г. Киев, пр-т Леси Украинки, 26
-              </a>
-            </li>
-            <li class="item">
-              <a href="mailto:info@example.com" class="mail link">info@example.com</a>
-            </li>
-            <li class="item">
-              <a href="tel:+380991111111" class="tel link">+38 099 111 11 11</a>
-            </li>
-          </ul>
-          <!-- Social -->
-          <div class="social">
-            <p class="text">присоединяйтесь</p>
-            <a href="" class="social-links">
-              <svg class="links-icon" width="20px" height="20px">
-                <use href="/images/icons.svg/symbol-defs.svg#icon-instagram"></use>
-              </svg>
-            </a>
-            <a href="" class="social-links">
-              <svg class="links-icon" width="20px" height="20px">
-                <use href="/images/icons.svg/symbol-defs.svg#icon-twitter"></use>
-              </svg>
-            </a>
-            <a href="" class="social-links">
-              <svg class="links-icon" width="20px" height="20px">
-                <use href="/images/icons.svg/symbol-defs.svg#icon-facebook"></use>
-              </svg>
-            </a>
-            <a href="" class="social-links">
-              <svg class="links-icon" width="20px" height="20px">
-                <use href="/images/icons.svg/symbol-defs.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </div>
-        </address>
+        <div>
+          <a href="./index.html" class="logo link white-color-logo"
+            ><span class="accent">Web</span>Studio</a
+          >
+          <!-- Address -->
+          <address class="address">
+            <ul class="site-add list">
+              <li class="item">
+                <a
+                  href=" https://goo.gl/maps/tUF5QNgFsShk5FHRA"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  class="link"
+                >
+                  г. Киев, пр-т Леси Украинки, 26
+                </a>
+              </li>
+              <li class="item">
+                <a href="mailto:info@example.com" class="mail link">info@example.com</a>
+              </li>
+              <li class="item">
+                <a href="tel:+380991111111" class="tel link">+38 099 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <!-- Social -->
+        <div class="social">
+          <p class="text">присоединяйтесь</p>
+          <a href="" class="social-links">
+            <svg class="links-icon" width="20px" height="20px">
+              <use href="./images/icons.svg/symbol-defs.svg#icon-instagram"></use>
+            </svg>
+          </a>
+          <a href="" class="social-links">
+            <svg class="links-icon" width="20px" height="20px">
+              <use href="./images/icons.svg/symbol-defs.svg#icon-twitter"></use>
+            </svg>
+          </a>
+          <a href="" class="social-links">
+            <svg class="links-icon" width="20px" height="20px">
+              <use href="./images/icons.svg/symbol-defs.svg#icon-facebook"></use>
+            </svg>
+          </a>
+          <a href="" class="social-links">
+            <svg class="links-icon" width="20px" height="20px">
+              <use href="./images/icons.svg/symbol-defs.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </div>
       </div>
     </footer>
   </body>
