--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <!-- E-mail -->
           <li class="item">
             <a href="mailto:info@devstudio.com" class="link">
-              <svg class="icon-envelope" width="16px" height="12px">
+              <svg class="icon-envelope" width="16" height="12">
                 <use href="./images/icons.svg/symbol-defs.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com</a
@@ -42,7 +42,7 @@
           <!-- Tel -->
           <li class="item">
             <a href="tel:+380961111111" class="link">
-              <svg class="icon-smartphone" width="10px" height="16px">
+              <svg class="icon-smartphone" width="10" height="16">
                 <use href="./images/icons.svg/symbol-defs.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11</a
@@ -300,42 +300,42 @@
           <ul class="customers-liste list">
             <li class="customers-descrip">
               <a href="" class="customers-links">
-                <svg class="icon-group1" width="41px" height="46.7px">
+                <svg class="icon-group1" width="106" height="60">
                   <use href="./images/icons.svg/symbol-defs.svg#icon-group1"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-descrip">
               <a href="" class="customers-links">
-                <svg class="icon-group2" width="41px" height="46.7px">
+                <svg class="icon-group2" width="106" height="60">
                   <use href="./images/icons.svg/symbol-defs.svg#icon-group2"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-descrip">
               <a href="" class="customers-links">
-                <svg class="icon-group3" width="41px" height="46.7px">
+                <svg class="icon-group3" width="106" height="60">
                   <use href="./images/icons.svg/symbol-defs.svg#icon-group3"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-descrip">
               <a href="" class="customers-links">
-                <svg class="icon-group4" width="41px" height="46.7px">
+                <svg class="icon-group4" width="106" height="60">
                   <use href="./images/icons.svg/symbol-defs.svg#icon-group4"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-descrip">
               <a href="" class="customers-links">
-                <svg class="icon-group5" width="41px" height="46.7px">
+                <svg class="icon-group5" width="106" height="60">
                   <use href="./images/icons.svg/symbol-defs.svg#icon-group5"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-descrip">
               <a href="" class="customers-links">
-                <svg class="icon-group6" width="41px" height="46.7px">
+                <svg class="icon-group6" width="106" height="60">
                   <use href="./images/icons.svg/symbol-defs.svg#icon-group6"></use>
                 </svg>
               </a>
