--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
           <!-- projects -->
           <ul class="projects list">
             <li class="item">
-              <a href="" class="link">
+              <a href="" class="projects-links link">
                 <img src="images/img1.jpg" alt="Laptop website" width="370" />
                 <div class="projects-descr">
                   <h2 class="title">Технокряк</h2>
@@ -77,7 +77,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="" class="link">
+              <a href="" class="projects-links link">
                 <img src="images/img2.jpg" alt="Basketball design" width="370" />
                 <div class="projects-descr">
                   <h2 class="title">Постер New Orlean vs Golden Star</h2>
@@ -86,7 +86,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="" class="link">
+              <a href="" class="projects-links link">
                 <img src="images/img3.jpg" alt="Seafood" width="370" />
                 <div class="projects-descr">
                   <h2 class="title">Ресторан Seafood</h2>
@@ -95,7 +95,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="" class="link">
+              <a href="" class="projects-links link">
                 <img src="images/img4.jpg" alt="Headphone" width="370" />
                 <div class="projects-descr">
                   <h2 class="title">Проект Prime</h2>
@@ -104,7 +104,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="" class="link">
+              <a href="" class="projects-links link">
                 <img src="images/img5.jpg" alt="Boxes" width="370" />
                 <div class="projects-descr">
                   <h2 class="title">Проект Boxes</h2>
@@ -113,7 +113,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="" class="link">
+              <a href="" class="projects-links link">
                 <img src="images/img6.jpg" alt="Monitor" width="370" />
                 <div class="projects-descr">
                   <h2 class="title">Inspiration has no Borders</h2>
@@ -122,7 +122,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="" class="link">
+              <a href="" class="projects-links link">
                 <img src="images/img7.jpg" alt="Magazine" width="370" />
                 <div class="projects-descr">
                   <h2 class="title">Издание Limited Edition</h2>
@@ -131,7 +131,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="" class="link">
+              <a href="" class="projects-links link">
                 <img src="images/img8.jpg" alt="Label Tag" width="370" />
                 <div class="projects-descr">
                   <h2 class="title">Проект LAB</h2>
@@ -140,7 +140,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="" class="link">
+              <a href="" class="projects-links link">
                 <img src="images/img9.jpg" alt="Working at a computer" width="370" />
                 <div class="projects-descr">
                   <h2 class="title">Growing Business</h2>
